--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
-MONGODB_CONNECTION_STRING="mongodb+srv://ashimsapkota250:<jTUVahugfOfijqR4@food-ordering.vbctu.mongodb.net/?retryWrites=true&w=majority&appName=food-ordering"
+VITE_AUTH0_DOMAIN=dev-4kx6ux7sbtq5smpe.us.auth0.com
+VITE_AUTH0_CLIENTID=za6Pr7NrodyuYPWPiZ46QWuv4aAMhbwn
+VITE_AUTH0_REDIRECTURI=http://localhost:5173
