auth with accesskey

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGODB_CONNECTION_STRING="mongodb+srv://ashimsapkota250:jTUVahugfOfijqR4@food-ordering.vbctu.mongodb.net/?retryWrites=true&w=majority&appName=food-ordering"
+AUDIENCE= mern-food-delievery
+ISSUERBASEURL= https://dev-4kx6ux7sbtq5smpe.us.auth0.com/
