--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
 VITE_AUTH0_DOMAIN=dev-4kx6ux7sbtq5smpe.us.auth0.com
 VITE_AUTH0_CLIENTID=za6Pr7NrodyuYPWPiZ46QWuv4aAMhbwn
 VITE_AUTH0_REDIRECTURI=http://localhost:5173
-API_BASE_URL=http://localhost:7000
+VITE_API_BASE_URL=http://localhost:7000
+VITE_AUTH0_AUDIENCE= mern-food-delievery
