--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,8 @@
 MONGODB_CONNECTION_STRING="mongodb+srv://ashimsapkota250:jTUVahugfOfijqR4@food-ordering.vbctu.mongodb.net/?retryWrites=true&w=majority&appName=food-ordering"
 AUDIENCE= mern-food-delievery
 ISSUERBASEURL= https://dev-4kx6ux7sbtq5smpe.us.auth0.com/
+CLOUDINARY_CLOUD_NAME=dvai7sxlv
+
+CLOUDINARY_API_KEY=122421788332644
+
+CLOUDINARY_SECRET_KEY=mqcD4XViWGd8SJRZPs9v4sSs9Fg
