--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "nodemon",
-    "build": "npm install && npx tsc",
+    "dev":  "concurrently \"nodemon\" \"npm run stripe\"",
+
+    "stripe": "stripe listen --forward-to localhost:7000/api/order/checkout/webhook",
     "start": "node dist/src/index.js"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "cloudinary": "^2.5.1",
+    "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
